# AI-Engineer-Internship

./: .gitmodules  pyproject.toml
ask-the-ai-project/: main.py  main_groq.py
day01/: dog_image.py  gthub_user.py  search_books.py  weather.py
day02/: handle_errors_llm_call.py  interactive_question_Script.py  llm_call.py  multiple_interactive_questions.py  ollama_script.py  provider_switcher_script.py
day03/: arithmetic_weakness.py  escape_hatch.py  hallucinations.py  temperature_explorer.py  token_count_growth.py
day04/: conversation_history.py  extract_structured_data.py  system_prompt.py
day05/: batch_encoding.py  odd_one.py  semantic_vs_keyword_search.py
day06/: large_Docs.py  metadata.py
day07/: generation.py  query_pipeline.py
day08/: 3. overlapping_chunks.py  4. RAG_with_3Strategies.py
day09/: 3.file_upload.py  4.caching.py  6.robust_rag_app.py
day1/: post_request.py  random_joke.py
day10/: 1.ProblemSolvedUsingTools.py  2. TestTools.py  3.SystemPrompt.py  4. Parser.py  5.FullLoop.py  6.MultipleQuestions.py  7.BreakAgent.py
day11/: 1. UnitConverterTool.py  2. SystemPrompt.py  3. ToolSelection.py  4. ObserveToolSelection.py  5. SearchUsingWikipedia.py  6. RealWebSearch.py  7. RepitionDetection.py  8. FinalStressTest.py
day12/: 2. InjectionGuard.py  3. HardenedSystemPrompt.py  4. InputScopeFilter.py  5. OutputScopeFilter.py  6. PIi_Detector.py  7. AppWithPI.py
day13/: 2. run_eval_set.py  2. run_eval_set_cont.py  3. JudgeSystemPrompt.py  4. ScoreOneResult.py  5. RunJudgeForAll.py  eval_results.json  eval_scores.json  eval_set.json  python.txt
(+32 files in other folders)
